# mm2024-mcp

./: .gitignore  LICENSE  README.md  TEST_PLAN.md  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
scripts/: mm2024-mcp.ps1
src/mm2024_mcp/: __init__.py  media_monkey_client.py  models.py  server.py
tests/: test_media_monkey_client.py
