[project]
name = "mm2024-mcp"
version = "0.1.0"
description = "Model Context Protocol server that bridges to MediaMonkey 2024 via COM"
readme = "README.md"
authors = [{ name = "MediaMonkey 2024 MCP" }]
requires-python = ">=3.11"
dependencies = [
    "modelcontextprotocol>=0.1.0",
    "pydantic>=2.7",
    "pywin32>=306; platform_system == 'Windows'",
]

[project.scripts]
mm2024-mcp = "mm2024_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
