[project]
name = "mm2024-mcp"
version = "0.1.0"
description = "Model Context Protocol server that bridges to MediaMonkey 2024 via COM"
readme = "README.md"
authors = [{ name = "MediaMonkey 2024 MCP" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "modelcontextprotocol>=1.0.1",
    "pydantic>=2.7",
    "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.6",
    "twine>=5.1",
    "types-pywin32>=306",
]

[project.scripts]
mm2024-mcp = "mm2024_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
